--- a/index.html
+++ b/index.html
@@ -1,60 +1,46 @@
- 
 <html>
-  <head>
-    <title>Image recognition</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
-   <link rel="stylesheet" href="style.css">
-  
-  </head>
+<head>
+  <title>Sound Identification Web App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&family=Supermercado+One&display=swap"
+    rel="stylesheet">
+</head>
 
-  <body>
-  <div class="container">
-    
-    <center>
-<h3 class="btn btn-default heading">Image recognition</h3>
-      <br><br>
-
-      <p style="font-size: 22px;">Model is trained to identify the following objects: </p>
-      <br><br>
-<b class="name_of_objects">
-  Pen
-  <hr>
-  Note book
-  <hr>
-  Box
-  <hr>
-  Keys
-  <hr>
-  Book
-  <hr>
-  Paper
-  <hr>
-</b>
-
-      <label>Webcam View - </label>
-<div id="camera"></div>
-      <br><br>
-      <div id="result"></div>
-      <br><br>
-<button onclick="take_snapshot();" class="btn btn-info">Capture Image</button>
-      <br><br>
-      <button onclick="check();" class="btn btn-success">Identify Image</button>
-      <br><br>
-
-      <p style="font-size: 22px;">Object :<span id="result_object_name"></span>  </p>
-      <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy"></span> </p>
-    </center>
-
+<body>
+  <div class="col-xs-12 header_div text-center">
+    <h2>Sound Controlled Aliens</h2>
+    <p>Note:Play different sounds like clap,snap,bell to make the aliens dance.</p>
   </div>
+  <div class="main_div">
+    <center>
+      <br>
+      <button class="btn btn-warning" onclick="startClassification();">Start</button>
+      <h3 id="result_label">I can hear -</h3>
+      <h4 id="result_confidence">Accuracy</h4>
+      <br>
+      <img src="aliens-01.png" id="alien1" width="300" height="300">
+      <img src="aliens-02.png" id="alien2" width="300" height="300">
+      <img src="aliens-03.png" id="alien3" width="300" height="300">
+      <img src="aliens-04.png" id="alien4" width="300" height="300">
+    </center>
+  </div>
+  <div id="copy_right_footer">
+    Developed by -Priyansh Singh Bisht
+  </div>
+
+</body>
 <script src="main.js"></script>
+</body>
 
-  </body>
 </html>
-
- 
